--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>關於我的二三事</title>
+    <title>關於我</title>
     <style>
         body{
             background-color: lightgrey;
@@ -20,29 +20,26 @@
     </style>
 
 <body>
-    <h3>陳定宏 Ding-Horng Chen</h3>
+    <h3>劉宣鈺</h3>
     <table>
         <tr>
             <td width="300px">
                 <ul>
-                    <li>南臺科技大學 資訊工程系副教授</li>
-                    <li>辦公室：C203-3</li>
-                    <li>電話：(06)2533131 ext 3222</li>
-                    <li>傳真：(06)2422310</li>
-                    <li>E-mail： chendh@stust.edu.tw</li>
-                    <li><a href="http://www.chendh.idv.tw/">個人網址</a></li>
+                    <li>南臺科技大學 資訊工程系五專三年級學生</li>
+                    <li>電話：０９７６＊＊＊＊＊＊</li>
+                    <li>E-mail： ５ｂ１ｇ０９０８＠ｓｔｕｓｔ．ｅｄｕ．ｔｗ</li>
                 </ul>
             </td>
             <td width="200px">
-                <img src="img/chendh-1217x1536.jpg" alt="陳定宏" width="200px" />
+                <img src="IMG_4112.jpeg" alt="劉宣鈺" width="200px" />
             </td>
         </tr>
     </table>
-    <h4>學歷</h4>
+    <h4>經歷</h4>
     <ul>
-        <li>成功大學 資訊工程研究所 博士</li>
-        <li>成功大學 資訊工程研究所 碩士</li>
-        <Li>成功大學 數學系</Li>
+        <li>Apple Computer, Inc.產品使用者</li>
+        <li>現役熬夜選手</li>
+        <Li>Racing S 125正式車手</Li>
     </ul>
 </body>
 
