--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 <body>
     <h1>103下學期五專三年級Javascript程式設計課程</h1>
     <a href="about.html">關於我</a>
-    <a href="research.html">研究</a>
+    <a href="research.html">上課內容</a>
 </body>
 </html>
