--- a/research.html
+++ b/research.html
@@ -17,23 +17,14 @@
 
 <body>
     <div id="myresearch">
-        <h3>研究主題</h3>
+        <h3>上課內容</h3>
         <ol>
-            <li>影像處理 (Image Processing)</li>
+            <li>html基礎</li>
             <li>
-                電腦視覺 (Computer Vision)
+                css基礎
             </li>
             <li>
-                圖訊識別 (Pattern Recognition)
-            </li>
-            <li>
-                工業檢測 (Industrial Inspection)
-            </li>
-            <li>
-                人工智慧(Artificial Intelligence)
-            </li>
-            <li>
-                智慧農業(Smart Agriculture)
+                GitHub Pages
             </li>
         </ol>
     </div>
