--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 </head>
 <body>
     <h1>103下學期五專三年級Javascript程式設計課程</h1>
+    <a href="index.html">首頁</a>
     <a href="about.html">關於我</a>
-    <a href="research.html">上課內容</a>
+    <a href="research.html">研究</a>
+    <a href="homework.html">作業</a>
 </body>
 </html>
